--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     .step-badge{background:#eef1f4; border:1px solid #e5e7eb; border-radius:999px; padding:.25rem .6rem; font-weight:600; color:#495057;}
     .row-complete{background:var(--accent-green) !important;}
     .grade-pill{
-      border:1px solid var(--border); border-radius:10px; padding:.5rem .7rem; cursor:pointer;
-      background:#fff; font-weight:700; min-width:72px; text-align:center;
+      border:1px solid var(--border); border-radius:0; padding:1rem 0; cursor:pointer;
+      background:#fff; font-weight:700; width:100%; text-align:center;
     }
     .grade-pill small{display:block; font-weight:500; color:#666;}
     .grade-pill.active{outline:2px solid var(--accent-green-border);}
@@ -104,7 +104,7 @@
                     <div class="row g-3">
                       <div class="col-12 col-md-7">
                         <label class="form-label">Subject Name</label>
-                        <input id="subName" class="form-control" placeholder="e.g. Maths, English">
+                        <input id="subName" class="form-control" placeholder="">
                       </div>
                       <div class="col-6 col-md-3">
                         <label class="form-label">Level</label>
@@ -123,7 +123,7 @@
 
                       <!-- Grade pills -->
                       <div class="col-12">
-                        <div id="gradePills" class="d-flex flex-wrap gap-2"></div>
+                        <div id="gradePills" class="d-grid" style="grid-template-columns: repeat(4, 1fr); gap: .5rem;"></div>
                       </div>
 
                       <!-- Remaining meter -->
@@ -154,19 +154,18 @@
 
                   <!-- Percent grid -->
                   <div class="mb-2">
-                    <div class="d-grid gap-2" style="grid-template-columns: repeat(6, 1fr); display:grid;">
-                      <button class="btn btn-outline-secondary pct" data-p="0">0%</button>
-                      <button class="btn btn-outline-secondary pct" data-p="10">10%</button>
-                      <button class="btn btn-outline-secondary pct" data-p="20">20%</button>
-                      <button class="btn btn-outline-secondary pct" data-p="30">30%</button>
-                      <button class="btn btn-outline-secondary pct" data-p="40">40%</button>
-                      <button class="btn btn-outline-secondary pct" data-p="50">50%</button>
-                      <button class="btn btn-outline-secondary pct" data-p="60">60%</button>
-                      <button class="btn btn-outline-secondary pct" data-p="70">70%</button>
+                    <div class="d-grid gap-2" style="grid-template-columns: repeat(3, 1fr); display:grid;">
                       <button class="btn btn-outline-secondary pct" data-p="80">80%</button>
                       <button class="btn btn-outline-secondary pct" data-p="90">90%</button>
                       <button class="btn btn-outline-secondary pct" data-p="100">100%</button>
-                      <button id="pctRemaining" class="btn btn-outline-secondary">= Remaining</button>
+                      <button class="btn btn-outline-secondary pct" data-p="50">50%</button>
+                      <button class="btn btn-outline-secondary pct" data-p="60">60%</button>
+                      <button class="btn btn-outline-secondary pct" data-p="70">70%</button>
+                      <button class="btn btn-outline-secondary pct" data-p="20">20%</button>
+                      <button class="btn btn-outline-secondary pct" data-p="30">30%</button>
+                      <button class="btn btn-outline-secondary pct" data-p="40">40%</button>
+                      <button class="btn btn-outline-secondary pct" data-p="0">0%</button>
+                      <button class="btn btn-outline-secondary pct" data-p="10">10%</button>
                     </div>
                   </div>
 
