--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,9 @@
     .badge-chip{background:#f1f3f5; color:#495057; border:1px solid #e9ecef; border-radius:9999px; padding:0 .5rem; margin:.1rem; display:inline-block;}
     #histogram{max-height:420px;}
     .navbar-light{background:#ffffff; border-bottom:1px solid var(--border);}
+    .letter-filter{display:flex; flex-wrap:wrap; gap:4px; margin-top:.25rem;}
+    .letter-filter button{border:none;background:#f1f3f5;padding:2px 6px;font-size:.8rem;cursor:pointer;}
+    .letter-filter button.active{background:#ced4da;}
     .ad-box{
       background:#ffffff; border:1px solid var(--border); border-radius:.5rem;
       min-height:600px; position:sticky; top:72px; display:flex; align-items:center; justify-content:center;
@@ -87,6 +90,7 @@
                 <label class="form-label mb-0">School</label>
                 <input id="school" class="form-control mx-auto" style="max-width:300px" list="schoolList" placeholder="Type your school">
                 <datalist id="schoolList"></datalist>
+                <div id="schoolLetters" class="letter-filter"></div>
               </div>
             </div>
             <p class="text-muted mt-2 mb-0">Tap a grade (H1–H8), then set its probability with the % grid or enter it manually below. The bar fills to 100%. Maths bonus applies only for <b>Higher</b>, and only one subject can be Maths.</p>
@@ -111,6 +115,7 @@
                         <label class="form-label">Subject Name</label>
                         <input id="subName" class="form-control" list="subjectList" placeholder="">
                         <datalist id="subjectList"></datalist>
+                        <div id="subjectLetters" class="letter-filter"></div>
                       </div>
                       <div class="col-6 col-md-3">
                         <label class="form-label">Level</label>
@@ -243,6 +248,9 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-firestore-compat.js"></script>
   <!-- Your app JS (defer so DOM exists) -->
   <script src="app.js" defer></script>
 </body>
