feat: store predictions with auth

--- a/public/index.html
+++ b/public/index.html
@@ -251,6 +251,7 @@
   <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-auth-compat.js"></script>
   <!-- Your app JS (defer so DOM exists) -->
   <script src="app.js" defer></script>
 </body>
