--- a/public/index.html
+++ b/public/index.html
@@ -88,9 +88,7 @@
               </div>
               <div>
                 <label class="form-label mb-0">School</label>
-                <input id="school" class="form-control mx-auto" style="max-width:300px" list="schoolList" placeholder="Type your school">
-                <datalist id="schoolList"></datalist>
-                <div id="schoolLetters" class="letter-filter"></div>
+                <input id="school" class="form-control mx-auto" style="max-width:300px" placeholder="Type your school">
               </div>
             </div>
             <p class="text-muted mt-2 mb-0">Tap a grade (H1–H8), then set its probability with the % grid or enter it manually below. The bar fills to 100%. Maths bonus applies only for <b>Higher</b>, and only one subject can be Maths.</p>
@@ -251,6 +249,7 @@
   <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-auth-compat.js"></script>
   <!-- Your app JS (defer so DOM exists) -->
   <script src="app.js" defer></script>
 </body>
