--- a/public/index.html
+++ b/public/index.html
@@ -84,8 +84,8 @@
     <div class="container-fluid">
       <a class="navbar-brand fw-semibold" href="#" style="color:#333;">LC Points</a>
       <div class="d-flex align-items-center gap-3">
-        <a class="text-muted text-decoration-none" href="#">About</a>
-        <a class="text-muted text-decoration-none" href="#">Privacy</a>
+        <a class="text-muted text-decoration-none" href="about.html">About</a>
+        <a class="text-muted text-decoration-none" href="privacy.html">Privacy</a>
       </div>
     </div>
   </nav>
