--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
     </div>
   </nav>
 
-  <div class="container-fluid">
+  <div class="container" style="max-width: 900px;">
     <div class="row g-3">
       <main class="col-12">
         <div class="py-3">
