--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,7 @@
       <div class="d-flex align-items-center gap-3">
         <a class="text-muted text-decoration-none" href="about.html">About</a>
         <a class="text-muted text-decoration-none" href="privacy.html">Privacy</a>
+        <a class="text-muted text-decoration-none" href="results.html">Results</a>
       </div>
     </div>
   </nav>
@@ -228,7 +229,7 @@
   </div>
 
   <footer class="text-center my-4">
-    <a href="about.html">About</a> · <a href="privacy.html">Privacy</a>
+    <a href="about.html">About</a> · <a href="privacy.html">Privacy</a> · <a href="results.html">Results</a>
   </footer>
 
   <!-- Bootstrap JS -->
