Require selecting subjects from list and add informational pages

--- a/public/index.html
+++ b/public/index.html
@@ -62,8 +62,8 @@
     <div class="container-fluid">
       <a class="navbar-brand fw-semibold" href="#" style="color:#333;">LC Points</a>
       <div class="d-flex align-items-center gap-3">
-        <a class="text-muted text-decoration-none" href="#">About</a>
-        <a class="text-muted text-decoration-none" href="#">Privacy</a>
+        <a class="text-muted text-decoration-none" href="about.html">About</a>
+        <a class="text-muted text-decoration-none" href="privacy.html">Privacy</a>
       </div>
     </div>
   </nav>
@@ -113,8 +113,7 @@
                     <div class="row g-3">
                       <div class="col-12 col-md-7">
                         <label class="form-label">Subject Name</label>
-                        <input id="subName" class="form-control" list="subjectList" placeholder="">
-                        <datalist id="subjectList"></datalist>
+                        <select id="subName" class="form-select"></select>
                         <div id="subjectLetters" class="letter-filter"></div>
                       </div>
                       <div class="col-6 col-md-3">
