feat: add filterable subject dropdown

--- a/public/index.html
+++ b/public/index.html
@@ -118,8 +118,8 @@
                     <div class="row g-3">
                       <div class="col-12 col-md-8">
                         <label class="form-label">Subject Name</label>
-                        <input id="subFilter" class="form-control mb-2" placeholder="Type to filter subjects">
-                        <select id="subName" class="form-select" required></select>
+                        <input id="subName" class="form-control" list="subjectsList" placeholder="Start typing to choose a subject" required>
+                        <datalist id="subjectsList"></datalist>
                       </div>
                       <div class="col-12 col-md-4">
                         <label class="form-label">Level</label>
