Highlight perfect 625 scores on results page

--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
             <div class="d-flex flex-column align-items-center gap-2">
               <div>
                 <label class="form-label mb-0">Target Points</label>
-                <input id="target" type="number" class="form-control mx-auto" style="max-width:200px" placeholder="e.g. 500" required>
+                <input id="target" type="number" max="625" class="form-control mx-auto" style="max-width:200px" placeholder="e.g. 500" required>
               </div>
               <div>
                 <label class="form-label mb-0">School</label>
