--- a/public/index.html
+++ b/public/index.html
@@ -246,5 +246,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-auth-compat.js"></script>
   <!-- Your app JS (defer so DOM exists) -->
   <script src="app.js" defer></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7429797559685152"
+     crossorigin="anonymous"></script>
 </body>
 </html>
