--- a/public/privacy.html
+++ b/public/privacy.html
@@ -25,6 +25,6 @@
     <p>Each prediction record includes your school name, target points, calculated mean, and expected points for each subject.</p>
     <p>Source code is available on <a href="https://github.com/iamharryashton/predictor" target="_blank" rel="noopener">GitHub</a>. For privacy questions, contact <a href="mailto:iamharryashton@gmail.com">iamharryashton@gmail.com</a>.</p>
   </div>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7429797559685152"
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7429797559685152"></script>
 </body>
 </html>
