--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,8 @@
     #errOverlay{position:fixed;left:0;right:0;bottom:0;z-index:9999;background:#fee;border-top:1px solid #f5c2c7;color:#842029;padding:.5rem 1rem;font-size:.9rem;display:none}
     #errOverlay pre{white-space:pre-wrap;margin:0}
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7429797559685152"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
