--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     "@context": "https://schema.org",
     "@type": "WebApplication",
     "name": "Leaving Cert Points Calculator",
-    "url": "https://lcpoints.app/",
+    "url": "https://lcpoints.ie/",
     "applicationCategory": "EducationalApplication",
     "operatingSystem": "Any",
     "description": "Interactive calculator that predicts Leaving Cert points probabilities."
