--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Interactive Leaving Cert points calculator that estimates your probability of reaching target points." />
   <meta name="keywords" content="Leaving Cert points calculator, points probabilities, points prediction, Irish Leaving Certificate, LC points" />
   <meta name="robots" content="index, follow" />
-  <title>Leaving Cert Points Calculator | Points Probability Wizard</title>
+  <title>Leaving Cert Points Calculator</title>
   <meta property="og:title" content="Leaving Cert Points Calculator" />
   <meta property="og:description" content="Estimate Leaving Cert points and view your chance of achieving target scores." />
   <meta property="og:type" content="website" />
