Add scoring page with analytics and collapsible results

--- a/public/about.html
+++ b/public/about.html
@@ -21,8 +21,7 @@
       <div class="d-flex align-items-center gap-3">
         <a class="text-muted text-decoration-none" href="about.html">About</a>
         <a class="text-muted text-decoration-none" href="privacy.html">Privacy</a>
-        <a class="text-muted text-decoration-none" href="results.html">Results</a>
-        <a class="text-muted text-decoration-none" href="analytics.html">Analytics</a>
+        <a class="text-muted text-decoration-none" href="scoring.html">Scoring</a>
       </div>
     </div>
   </nav>
