--- a/public/index.html
+++ b/public/index.html
@@ -92,8 +92,7 @@
       <div class="d-flex align-items-center gap-3">
         <a class="text-muted text-decoration-none" href="about.html">About</a>
         <a class="text-muted text-decoration-none" href="privacy.html">Privacy</a>
-        <a class="text-muted text-decoration-none" href="results.html">Results</a>
-        <a class="text-muted text-decoration-none" href="analytics.html">Analytics</a>
+        <a class="text-muted text-decoration-none" href="scoring.html">Scoring</a>
       </div>
     </div>
   </nav>
@@ -227,7 +226,7 @@
             </div>
           </div>
           <div id="resultsLink" class="text-center mb-3" style="display:none;">
-            <a href="results.html">See how other schools are scoring</a>
+            <a href="scoring.html">See how other schools are scoring</a>
           </div>
 
           <div class="row g-3">
