Emphasize results link

--- a/public/index.html
+++ b/public/index.html
@@ -226,8 +226,8 @@
               <div id="selectionNote" class="text-muted">No results yet — complete a few subjects and click <b>Finish & Calculate</b>.</div>
             </div>
           </div>
-          <div id="resultsLink" class="text-center mb-3" style="display:none;">
-            <a href="results.html">See how other schools are scoring</a>
+          <div id="resultsLink" class="my-4" style="display:none;">
+            <a href="results.html" class="btn btn-main btn-lg w-100 py-3 fs-4">See how other schools are scoring</a>
           </div>
 
           <div class="row g-3">
